--- a/src/styles/css/header.scss
+++ b/src/styles/css/header.scss
@@ -317,17 +317,22 @@
     background-size: 22px;
   }
 }
-@media all and (max-width: 1099px) {
-  .headerWrap {
-    .lnbArea {
-      .btnLnb {
-        padding: 0 20px;
-      }
-    }
+@media all and (max-width: 1279px) {
+  .headerWrap .lnbArea .btnLnb {
+    padding: 0 20px;
   }
 }
-
-@media all and (max-width: 900px) {
+@media all and (max-width: 1099px) {
+  .headerWrap .lnbArea .btnLnb {
+    font-size: 13px;
+  }
+}
+@media all and (max-width: 1024px) {
+  .headerWrap .lnbArea .btnLnb {
+    padding: 0 10px;
+  }
+}
+@media all and (max-width: 800px) {
   .headerWrap {
     height: 60px;
     .logoArea {
