--- a/src/styles/css/header.scss
+++ b/src/styles/css/header.scss
@@ -61,16 +61,28 @@
     height: 60px;
     padding: 7px 0;
     .btnLnb {
-      padding: 0 30px;
+      display: inline-block;
+      -webkit-transition: all 0.2s ease-in-out;
+      -o-transition: all 0.2s ease-in-out;
+      transition: all 0.2s ease-in-out;
+      position: relative;
+      cursor: pointer;
       line-height: 43px;
       color: #fff;
       font-size: 15px;
       font-family: "Montserrat", sans-serif;
       font-weight: 400;
-      -webkit-transition: all 0.2s ease-in-out;
-      -o-transition: all 0.2s ease-in-out;
-      transition: all 0.2s ease-in-out;
-      position: relative;
+      button {
+        padding: 0 30px;
+        line-height: 43px;
+        color: #fff;
+        font-size: 15px;
+        font-family: "Montserrat", sans-serif;
+        font-weight: 400;
+        -webkit-transition: all 0.2s ease-in-out;
+        -o-transition: all 0.2s ease-in-out;
+        transition: all 0.2s ease-in-out;
+      }
       .lnbBorder {
         width: 100%;
         height: 2px;
@@ -156,7 +168,7 @@
     .btnLnb:hover .submenu {
       display: block;
     }
-    .btnLnb:hover {
+    .btnLnb:hover > button {
       color: #11aa8b;
       .lnbBorder {
         background: #11aa8b;
@@ -309,6 +321,12 @@
   .lnbArea .btnLnb {
     color: #7f7f7f;
   }
+  .lnbArea .btnLnb > button {
+    color: #7f7f7f;
+  }
+  .lnbArea .btnLnb > button:hover {
+    color: #11aa8b;
+  }
   .lnbArea .btnLnb:hover {
     color: #11aa8b;
   }
@@ -318,21 +336,17 @@
   }
 }
 @media all and (max-width: 1279px) {
-  .headerWrap .lnbArea .btnLnb {
+  .headerWrap .lnbArea .btnLnb > button {
     padding: 0 20px;
   }
 }
 @media all and (max-width: 1099px) {
-  .headerWrap .lnbArea .btnLnb {
+  .headerWrap .lnbArea .btnLnb > button {
     font-size: 13px;
   }
 }
-@media all and (max-width: 1024px) {
-  .headerWrap .lnbArea .btnLnb {
-    padding: 0 10px;
-  }
-}
-@media all and (max-width: 800px) {
+
+@media all and (max-width: 957px) {
   .headerWrap {
     height: 60px;
     .logoArea {
