--- a/src/styles/css/header.scss
+++ b/src/styles/css/header.scss
@@ -13,6 +13,14 @@
   -webkit-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+  img {
+    -webkit-touch-callout: none !important;
+    pointer-events: none !important;
+    -webkit-user-select: none !important;
+    -moz-user-select: -moz-none !important;
+    -ms-user-select: none !important;
+    user-select: none !important;
+  }
 
   .headerBox {
     max-width: 1320px;
