--- a/src/styles/css/popup.scss
+++ b/src/styles/css/popup.scss
@@ -36,6 +36,7 @@
     position: absolute;
     right: -10px;
     top: -10px;
+    z-index: 500;
     -webkit-box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.15);
   }
