--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -14,9 +14,16 @@
   letter-spacing: -0.025em;
 }
 select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
+  box-shadow: none;
   appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  background: -webkit-linear-gradient(transparent, transparent);
+  background: url("../img/iconDownG.svg") #fff 90% no-repeat;
+  background-size: 10px;
+}
+select::-ms-expand {
+  display: none;
 }
 img {
   -webkit-touch-callout: none !important;
