--- a/src/styles/css/header.scss
+++ b/src/styles/css/header.scss
@@ -23,7 +23,7 @@
   }
 
   .headerBox {
-    max-width: 1320px;
+    max-width: 100%;
     min-width: 280px;
     padding: 0 20px;
     margin: 0 auto;
@@ -344,14 +344,28 @@
     background-size: 22px;
   }
 }
-@media all and (max-width: 1279px) {
+@media all and (max-width: 1500px) {
   .headerWrap .lnbArea .btnLnb {
     padding: 0 20px;
   }
 }
+@media all and (max-width: 1279px) {
+  .headerWrap .lnbArea .btnLnb {
+    padding: 0 15px;
+  }
+}
+
 @media all and (max-width: 1099px) {
   .headerWrap .lnbArea .btnLnb > button {
     font-size: 13px;
+  }
+  .headerWrap .lnbArea .btnLnb {
+    padding: 0 12px;
+  }
+}
+@media all and (max-width: 987px) {
+  .headerWrap .lnbArea .btnLnb {
+    padding: 0 10px;
   }
 }
 
