눈내리는 이펙트 추가

--- a/src/styles/css/index.scss
+++ b/src/styles/css/index.scss
@@ -1,4 +1,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Noto+Sans:wght@400;700&display=swap");
+.snow-container {
+  display: flex;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 999999;
+  padding: 5px;
+  justify-content: space-between;
+}
+.snow-flake {
+  color: #fff;
+  animation: fall 10s linear infinite;
+  height: 100%;
+  opacity: 0;
+}
+@keyframes fall {
+  0% {
+    opacity: 0;
+  }
+  3% {
+    opacity: 0.9;
+  }
+  90% {
+    opacity: 0.9;
+  }
+  100% {
+    transform: translate(0, 100vh);
+    opacity: 0;
+  }
+}
+
 .main {
   width: 100%;
   min-width: 280px;
@@ -6,6 +37,7 @@
   position: relative;
   background: -o-linear-gradient(150deg, #103a69, #678cc9, #75ccff);
   background: linear-gradient(300deg, #103a69, #678cc9, #75ccff);
+
   img {
     -webkit-touch-callout: none !important;
     pointer-events: none !important;
