--- a/src/styles/css/subpageTop.scss
+++ b/src/styles/css/subpageTop.scss
@@ -932,6 +932,53 @@
     }
   }
 }
+.wrapMap {
+  font-size: 0;
+  text-align: left;
+  .half3 {
+    width: 33.333333%;
+    padding: 20px;
+    text-align: center;
+    display: inline-block;
+    img {
+      max-width: 100%;
+      border-radius: 10%;
+      margin-top: 10px;
+      margin-bottom: 20px;
+      -webkit-box-shadow: 0px 0px 10px rgba(129, 180, 158, 0.2);
+      box-shadow: 0px 0px 10px rgba(129, 180, 158, 0.2);
+      border: solid 3px #e0efe8;
+    }
+    .mapName {
+      font-family: "Montserrat", sans-serif;
+      font-weight: 700;
+      letter-spacing: -0.025em;
+      font-size: 18px;
+      color: #222;
+      word-break: keep-all;
+      width: 100%;
+      text-align: left;
+      span {
+        color: #81b49e;
+        font-size: 40px;
+        font-weight: 700;
+      }
+    }
+  }
+  .mapText {
+    width: 70%;
+    background: #e0efe8;
+    padding: 40px;
+    border-radius: 20px;
+    color: #81b49e;
+    font-weight: 700;
+    font-size: 24px;
+    text-align: left;
+    display: inline-block;
+    margin-top: 50px;
+  }
+}
+
 @media all and (max-width: 1319px) {
   .sub .subLeft {
     top: auto;
@@ -1019,6 +1066,12 @@
   }
   .eventArea {
     width: 33.333333%;
+  }
+  .wrapMap .half3 {
+    padding: 10px;
+    .mapName {
+      font-size: 14px;
+    }
   }
 }
 @media all and (max-width: 850px) {
@@ -1166,6 +1219,9 @@
     button {
       padding: 5px;
     }
+  }
+  .wrapMap .half3 {
+    width: 50%;
   }
 }
 @media all and (max-width: 604px) {
